added thoughts on separating reduplication and diversify signal strategies

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -150,11 +150,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "If we find that neither possibility 1 nor possibility 2 make it feasible to run simulations within a reasonable time-frame, we could consider tackling the different possible strategies for dealing with noise separately. I.e. one model where we allow for the possibility to add reduplication to signals vs. repair, and another model where we allow for diversification of signal segments "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
