coded up compressibility measure

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -163,19 +163,339 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Compressibility measure for two different language representation possibilities\n",
+    "\n",
+    "\n",
+    "### Possibility 1: Different form lengths\n",
+    "\n",
+    "#### Rewrite rules:\n",
+    "\n",
+    "**Reduplication + compositional:**\n",
+    "\n",
+    "There are in fact two different ways of reduplicating a compositional language: either reduplicating the whole signal, or reduplicating each of the segments. In both cases the length of the minimally redundant form, and therefore the language type's compressibility, will be the same however, as shown below.\n",
+    "\n",
+    "_**Reduplicate whole signal:**_\n",
+    "\n",
+    "*Language:*\n",
+    "\n",
+    "02 --> aaaa\n",
+    "\n",
+    "03 --> abab\n",
+    "\n",
+    "12 --> baba\n",
+    "\n",
+    "13 --> bbbb\n",
+    "\n",
+    "\n",
+    "*Rewrite rules:*\n",
+    "\n",
+    "S --> ABAB\n",
+    "\n",
+    "A:0 --> a\n",
+    "\n",
+    "A:1 --> b\n",
+    "\n",
+    "B:2 --> a\n",
+    "\n",
+    "B:3 --> b\n",
+    "\n",
+    "\n",
+    "*Minimally redundant form:*\n",
+    "\n",
+    "SABAB.A0a.A1b.B2a.B3b\n",
+    "\n",
+    "\n",
+    "_**Reduplicate each segment:**_\n",
+    "\n",
+    "*Language:*\n",
+    "\n",
+    "02 --> aaaa\n",
+    "\n",
+    "03 --> aabb\n",
+    "\n",
+    "12 --> bbaa\n",
+    "\n",
+    "13 --> bbbb\n",
+    "\n",
+    "\n",
+    "*Rewrite rules:*\n",
+    "\n",
+    "S --> AABB\n",
+    "\n",
+    "A:0 --> a\n",
+    "\n",
+    "A:1 --> b\n",
+    "\n",
+    "B:2 --> a\n",
+    "\n",
+    "B:3 --> b\n",
+    "\n",
+    "\n",
+    "*Minimally redundant form:*\n",
+    "\n",
+    "SAABB.A0a.A1b.B2a.B3b\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Diversify signal + holistic:**\n",
+    "\n",
+    "02 --> aaaa\n",
+    "\n",
+    "03 --> bbbb\n",
+    "\n",
+    "12 --> abba\n",
+    "\n",
+    "13 --> baab\n",
+    "\n",
+    "\n",
+    "*Rewrite rules:*\n",
+    "\n",
+    "S:02 --> aaaa\n",
+    "\n",
+    "S:03 --> bbbb\n",
+    "\n",
+    "S:12 --> abba\n",
+    "\n",
+    "S:13 --> baab\n",
+    "\n",
+    "\n",
+    "*Minimally redundant form:*\n",
+    "\n",
+    "S02aaaa.S03bbbb.S12abba.S13baab\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Repair + compositional:**\n",
+    "\n",
+    "02 --> aa\n",
+    "\n",
+    "03 --> ab\n",
+    "\n",
+    "12 --> ba\n",
+    "\n",
+    "13 --> bb\n",
+    "\n",
+    "\n",
+    "*Rewrite rules:*\n",
+    "\n",
+    "S --> AB\n",
+    "\n",
+    "A:0 --> a\n",
+    "\n",
+    "A:1 --> b\n",
+    "\n",
+    "B:2 --> a\n",
+    "\n",
+    "B:3 --> b\n",
+    "\n",
+    "\n",
+    "*Minimally redundant form:*\n",
+    "\n",
+    "SAB.A0a.A1b.B2a.B3b\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now let's calculate the actual compressibility in terms of coding length, given the strings in minimally redundant form specified above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T10:43:05.049060Z",
+     "start_time": "2019-11-14T10:43:05.044171Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from math import log2\n",
+    "\n",
+    "def character_probs(mrf_string):\n",
+    "    count_dict = {}\n",
+    "    for character in mrf_string:\n",
+    "        if character in count_dict.keys():\n",
+    "            count_dict[character] += 1\n",
+    "        else:\n",
+    "            count_dict[character] = 1       \n",
+    "    prob_dict = {}\n",
+    "    for character in count_dict.keys():\n",
+    "        char_prob = count_dict[character]/len(mrf_string)\n",
+    "        prob_dict[character] = char_prob\n",
+    "    return prob_dict\n",
+    "\n",
+    "\n",
+    "def coding_length(mrf_string):\n",
+    "    char_prob_dict = character_probs(mrf_string)\n",
+    "    coding_len = 0\n",
+    "    for character in mrf_string:\n",
+    "        coding_len += log2(char_prob_dict[character])\n",
+    "    return -coding_len\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T10:43:05.787717Z",
+     "start_time": "2019-11-14T10:43:05.782720Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coding_len_degenerate is:\n",
+      "38.55\n",
+      "\n",
+      "coding_len_degenerate is:\n",
+      "59.2\n",
+      "\n",
+      "coding_len_degenerate is:\n",
+      "67.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First, let's check whether the functions defined above work correctly\n",
+    "# for the example languages given in Kirby et al. (2015):\n",
+    "\n",
+    "mrf_string_degenerate = \"S02,03,12,13aa\"\n",
+    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "print(\"coding_len_degenerate is:\")\n",
+    "print(round(coding_len_degenerate, ndigits=2))\n",
+    "\n",
+    "mrf_string_degenerate = \"SAB.A0a.A1b.B2a.B3b\"\n",
+    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "print('')\n",
+    "print(\"coding_len_degenerate is:\")\n",
+    "print(round(coding_len_degenerate, ndigits=2))\n",
+    "\n",
+    "mrf_string_degenerate = \"S02aa.S03ab.S12bb.S13ba\"\n",
+    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "print('')\n",
+    "print(\"coding_len_degenerate is:\")\n",
+    "print(round(coding_len_degenerate, ndigits=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T10:43:06.355216Z",
+     "start_time": "2019-11-14T10:43:06.345974Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coding_len_compositional_reduplicate_whole_signal is:\n",
+      "64.24\n",
+      "\n",
+      "coding_len_compositional_reduplicate_segments is:\n",
+      "64.24\n",
+      "\n",
+      "coding_len_holistic_diversify_signal is:\n",
+      "84.83\n",
+      "\n",
+      "coding_len_compositional_repair is:\n",
+      "59.2\n",
+      "\n",
+      "ratio_reduplication_vs_repair is:\n",
+      "1.09\n",
+      "\n",
+      "ratio_diversify_signal_vs_reduplication is:\n",
+      "1.32\n",
+      "\n",
+      "ratio_diversify_signal_vs_repair is:\n",
+      "1.43\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And now that we know that these functions are coded up correctly,\n",
+    "# let's have a look at the coding lengths for our example languages\n",
+    "# for Possibility 1: different form lengths\n",
+    "\n",
+    "mrf_compositional_reduplicate_whole_signal = \"SABAB.A0a.A1b.B2a.B3b\"\n",
+    "coding_len_compositional_reduplicate_whole_signal = coding_length(mrf_compositional_reduplicate_whole_signal)\n",
+    "print(\"coding_len_compositional_reduplicate_whole_signal is:\")\n",
+    "print(round(coding_len_compositional_reduplicate_whole_signal, ndigits=2))\n",
+    "\n",
+    "mrf_compositional_reduplicate_segments = \"SAABB.A0a.A1b.B2a.B3b\"\n",
+    "coding_len_compositional_reduplicate_segments = coding_length(mrf_compositional_reduplicate_segments)\n",
+    "print('')\n",
+    "print(\"coding_len_compositional_reduplicate_segments is:\")\n",
+    "print(round(coding_len_compositional_reduplicate_segments, ndigits=2))\n",
+    "\n",
+    "mrf_holistic_diversify_signal = \"S02aaaa.S03bbbb.S12abba.S13baab\"\n",
+    "coding_len_holistic_diversify_signal = coding_length(mrf_holistic_diversify_signal)\n",
+    "print('')\n",
+    "print(\"coding_len_holistic_diversify_signal is:\")\n",
+    "print(round(coding_len_holistic_diversify_signal, ndigits=2))\n",
+    "\n",
+    "mrf_compositional_repair = \"SAB.A0a.A1b.B2a.B3b\"\n",
+    "coding_len_compositional_repair = coding_length(mrf_compositional_repair)\n",
+    "print('')\n",
+    "print(\"coding_len_compositional_repair is:\")\n",
+    "print(round(coding_len_compositional_repair, ndigits=2))\n",
+    "\n",
+    "\n",
+    "ratio_reduplication_vs_repair = coding_len_compositional_reduplicate_whole_signal/coding_len_compositional_repair\n",
+    "print('')\n",
+    "print(\"ratio_reduplication_vs_repair is:\")\n",
+    "print(round(ratio_reduplication_vs_repair, ndigits=2))\n",
+    "\n",
+    "\n",
+    "ratio_diversify_signal_vs_reduplication = coding_len_holistic_diversify_signal/coding_len_compositional_reduplicate_whole_signal\n",
+    "print('')\n",
+    "print(\"ratio_diversify_signal_vs_reduplication is:\")\n",
+    "print(round(ratio_diversify_signal_vs_reduplication, ndigits=2))\n",
+    "\n",
+    "ratio_diversify_signal_vs_repair = coding_len_holistic_diversify_signal/coding_len_compositional_repair\n",
+    "print('')\n",
+    "print(\"ratio_diversify_signal_vs_repair is:\")\n",
+    "print(round(ratio_diversify_signal_vs_repair, ndigits=2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alright, so as we can see from the coding lengths above, possibility 1 of how to represent languages gives relative coding lengths that capture the intuitions we have about how hard it is to learn these different languages: the compositional languages with reduplication only have slightly longer coding lengths than the compositional language without it (ratio reduplication:repair = 1.09:1), whereas the holistic language resulting from the diversify signal strategy has a significantly longer coding length (ratio diversify_signal:repair = 1.43:1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion about how to represent languages:\n",
+    "\n",
+    "Based on all the above, I'd say let's go for possibility 1 of allowing for different form lengths. That keeps our way of representing languages as close as possibility to the one used by Kirby et al. (2015); it allows us to straightforwardly calculate the coding lengths; and it will not cause languages to make use of a different number of characters, as possibility 2 would."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# References\n",
     "\n",
     "Burkett, D., & Griffiths, T. L. (2010). Iterated learning of multiple languages from multiple teachers. The Evolution of Language: Proceedings of the 8th International Conference (EVOLANG8), Utrecht, Netherlands, 14-17 April 2010, 58–65.\n",
     "\n",
     "Kirby, S., Tamariz, M., Cornish, H., & Smith, K. (2015). Compression and communication in the cultural evolution of linguistic structure. Cognition, 141, 87–102. https://doi.org/10.1016/j.cognition.2015.03.016"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
