added minimally redundant form function

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -305,16 +305,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-14T10:43:05.049060Z",
-     "start_time": "2019-11-14T10:43:05.044171Z"
+     "end_time": "2019-11-14T11:07:12.716551Z",
+     "start_time": "2019-11-14T11:07:12.704433Z"
     }
    },
    "outputs": [],
    "source": [
+    "def classify_language_four_forms(lang, forms, meaning_list):\n",
+    "    \"\"\"\n",
+    "    Classify one particular language as either 0 = degenerate, 1 = holistic, 2 = hybrid, 3 = compositional, 4 = other\n",
+    "    (Kirby et al., 2015). NOTE that this function is specific to classifying languages that consist of exactly 4 forms,\n",
+    "    where each form consists of exactly 2 characters. For a more general version of this function, see\n",
+    "    classify_language_general() below.\n",
+    "\n",
+    "    :param lang: a language; represented as a tuple of forms_without_noisy_variants, where each form index maps to same\n",
+    "    index in meanings\n",
+    "    :param forms: list of strings corresponding to all possible forms_without_noisy_variants\n",
+    "    :param meaning_list: list of strings corresponding to all possible meanings\n",
+    "    :returns: integer corresponding to category that language belongs to:\n",
+    "    0 = degenerate, 1 = holistic, 2 = hybrid, 3 = compositional, 4 = other (here I'm following the\n",
+    "    ordering used in the Kirby et al., 2015 paper; NOT the ordering from SimLang lab 21)\n",
+    "    \"\"\"\n",
+    "    class_degenerate = 0\n",
+    "    class_holistic = 1\n",
+    "    class_hybrid = 2  # this is a hybrid between a holistic and a compositional language; where *half* of the partial\n",
+    "    # forms is mapped consistently to partial meanings (instead of that being the case for *all* partial forms)\n",
+    "    class_compositional = 3\n",
+    "    class_other = 4\n",
+    "\n",
+    "    # First check whether some conditions are met, bc this function hasn't been coded up in the most general way yet:\n",
+    "    if len(forms) != 4:\n",
+    "        raise ValueError(\n",
+    "            \"This function only works for a world in which there are 4 possible forms_without_noisy_variants\"\n",
+    "        )\n",
+    "    if len(forms[0]) != 2:\n",
+    "        raise ValueError(\n",
+    "            \"This function only works when each form consists of 2 elements\")\n",
+    "    if len(lang) != len(meaning_list):\n",
+    "        raise ValueError(\"Lang should have same length as meanings\")\n",
+    "\n",
+    "    # lang is degenerate if it uses the same form for every meaning:\n",
+    "    if lang[0] == lang[1] and lang[1] == lang[2] and lang[2] == lang[3]:\n",
+    "        return class_degenerate\n",
+    "\n",
+    "    # lang is compositional if it makes use of all possible forms_without_noisy_variants, *and* each form element maps\n",
+    "    # to the same meaning element for each form:\n",
+    "    elif forms[0] in lang and forms[1] in lang and forms[2] in lang and forms[\n",
+    "        3] in lang and lang[0][0] == lang[1][0] and lang[2][0] == lang[3][0] and lang[0][\n",
+    "        1] == lang[2][1] and lang[1][1] == lang[3][1]:\n",
+    "        return class_compositional\n",
+    "\n",
+    "    # lang is holistic if it is *not* compositional, but *does* make use of all possible forms_without_noisy_variants:\n",
+    "    elif forms[0] in lang and forms[1] in lang and forms[2] in lang and forms[3] in lang:\n",
+    "        # within holistic languages, we can distinguish between those in which at least one part form is mapped\n",
+    "        # consistently onto one part meaning. This class we will call 'hybrid' (because for the purposes of repair, it\n",
+    "        # is a hybrid between a holistic and a compositional language, because for half of the possible noisy forms that\n",
+    "        # a listener could receive it allows the listener to figure out *part* of the meaning, and therefore use a\n",
+    "        # restricted request for repair instead of an open request.\n",
+    "        if lang[0][0] == lang[1][0] and lang[2][0] == lang[3][0]:\n",
+    "            return class_hybrid\n",
+    "        elif lang[0][1] == lang[2][1] and lang[1][1] == lang[3][1]:\n",
+    "            return class_hybrid\n",
+    "        else:\n",
+    "            return class_holistic\n",
+    "\n",
+    "    # In all other cases, a language belongs to the 'other' category:\n",
+    "    else:\n",
+    "        return class_other"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T11:14:07.806912Z",
+     "start_time": "2019-11-14T11:14:07.793609Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mrf_string_degenerate is:\n",
+      "S02,03,12,13aa\n",
+      "\n",
+      "mrf_string_holistic is:\n",
+      "S02aa.S03ab.S12bb.S13ba\n"
+     ]
+    }
+   ],
+   "source": [
     "from math import log2\n",
+    "\n",
+    "\n",
+    "meanings = ['02', '03', '12', '13']\n",
+    "forms_without_noisy_variants = ['aa', 'ab', 'ba', 'bb']\n",
+    "\n",
+    "lang_degenerate = ['aa', 'aa', 'aa', 'aa']\n",
+    "\n",
+    "lang_holistic = ['aa', 'ab', 'bb', 'ba']\n",
+    "\n",
+    "lang_compositional = ['aa', 'ab', 'ba', 'bb']\n",
+    "\n",
+    "\n",
+    "\n",
+    "def minimally_redundant_form(lang, forms, meaning_list):\n",
+    "    lang_class = classify_language_four_forms(lang, forms, meaning_list) # 0 = degenerate, 1 = holistic, 2 = hybrid, 3 = compositional, 4 = other\n",
+    "    if lang_class == 0: # the language is 'degenerate'\n",
+    "        mrf_string = 'S'\n",
+    "        for i in range(len(meaning_list)):\n",
+    "            meaning = meaning_list[i]\n",
+    "            if i != len(meaning_list)-1:\n",
+    "                mrf_string += str(meaning)+','\n",
+    "            else:\n",
+    "                mrf_string += str(meaning)\n",
+    "        mrf_string += lang[0]\n",
+    "    elif lang_class == 1 or lang_class == 2: # the language is 'holistic' or 'hybrid'\n",
+    "        mrf_string = ''\n",
+    "        for i in range(len(meaning_list)):\n",
+    "            meaning = meaning_list[i]\n",
+    "            form = lang[i]\n",
+    "            if i != len(meaning_list)-1:\n",
+    "                mrf_string += 'S'+meaning+form+'.'\n",
+    "            else:\n",
+    "                mrf_string += 'S'+meaning+form\n",
+    "    elif lang_class == 3: # the language is 'compositional'\n",
+    "        mrf_string = 'SAB'\n",
+    "        for i in range(len(meaning_list)):\n",
+    "            meaning = meaning_list[i]\n",
+    "    return mrf_string\n",
+    "\n",
+    "mrf_string_degenerate = minimally_redundant_form(lang_degenerate, forms_without_noisy_variants, meanings)\n",
+    "print(\"mrf_string_degenerate is:\")\n",
+    "print(mrf_string_degenerate)\n",
+    "\n",
+    "mrf_string_holistic = minimally_redundant_form(lang_holistic, forms_without_noisy_variants, meanings)\n",
+    "print('')\n",
+    "print(\"mrf_string_holistic is:\")\n",
+    "print(mrf_string_holistic)\n",
+    "\n",
     "\n",
     "def character_probs(mrf_string):\n",
     "    count_dict = {}\n",
@@ -341,11 +475,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-14T10:43:05.787717Z",
-     "start_time": "2019-11-14T10:43:05.782720Z"
+     "end_time": "2019-11-14T11:21:49.934010Z",
+     "start_time": "2019-11-14T11:21:49.930722Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from string import ascii_uppercase\n",
+    "\n",
+    "ascii_uppercase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-11-14T11:15:07.166647Z",
+     "start_time": "2019-11-14T11:15:07.160859Z"
     }
    },
    "outputs": [
