worked on minimally redundant form function

--- a/repair_vs_redundancy.ipynb
+++ b/repair_vs_redundancy.ipynb
@@ -379,11 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-14T11:14:07.806912Z",
-     "start_time": "2019-11-14T11:14:07.793609Z"
+     "end_time": "2019-11-14T13:33:26.106359Z",
+     "start_time": "2019-11-14T13:33:26.084149Z"
     }
    },
    "outputs": [
@@ -394,6 +394,34 @@
       "mrf_string_degenerate is:\n",
       "S02,03,12,13aa\n",
       "\n",
+      "n_features\n",
+      "2\n",
+      "categories are:\n",
+      "AB\n",
+      "mrf_string before for-loop is:\n",
+      "SAB\n",
+      "\n",
+      "i is:\n",
+      "0\n",
+      "category is:\n",
+      "A\n",
+      "category_feature_values are:\n",
+      "['0', '1']\n",
+      "feature_value_segments are:\n",
+      "['a', 'b']\n",
+      "\n",
+      "i is:\n",
+      "1\n",
+      "category is:\n",
+      "B\n",
+      "category_feature_values are:\n",
+      "['2', '3']\n",
+      "feature_value_segments are:\n",
+      "['a', 'b']\n",
+      "\n",
+      "mrf_string_compositional is:\n",
+      "SAB.A0a.A1b.B2a.B3b\n",
+      "\n",
       "mrf_string_holistic is:\n",
       "S02aa.S03ab.S12bb.S13ba\n"
      ]
@@ -401,53 +429,63 @@
    ],
    "source": [
     "from math import log2\n",
+    "from string import ascii_uppercase\n",
     "\n",
     "\n",
-    "meanings = ['02', '03', '12', '13']\n",
-    "forms_without_noisy_variants = ['aa', 'ab', 'ba', 'bb']\n",
+    "def mrf_degenerate(lang, meaning_list):\n",
+    "    mrf_string = 'S'\n",
+    "    for i in range(len(meaning_list)):\n",
+    "        meaning = meaning_list[i]\n",
+    "        if i != len(meaning_list)-1:\n",
+    "            mrf_string += str(meaning)+','\n",
+    "        else:\n",
+    "            mrf_string += str(meaning)\n",
+    "    mrf_string += lang[0]\n",
+    "    return mrf_string\n",
     "\n",
-    "lang_degenerate = ['aa', 'aa', 'aa', 'aa']\n",
     "\n",
-    "lang_holistic = ['aa', 'ab', 'bb', 'ba']\n",
+    "def mrf_holistic(lang, meaning_list):\n",
+    "    mrf_string = ''\n",
+    "    for i in range(len(meaning_list)):\n",
+    "        meaning = meaning_list[i]\n",
+    "        form = lang[i]\n",
+    "        if i != len(meaning_list)-1:\n",
+    "            mrf_string += 'S'+meaning+form+'.'\n",
+    "        else:\n",
+    "            mrf_string += 'S'+meaning+form\n",
+    "    return mrf_string\n",
+    "    \n",
     "\n",
-    "lang_compositional = ['aa', 'ab', 'ba', 'bb']\n",
-    "\n",
+    "def mrf_compositional(lang, meaning_list):\n",
+    "    n_features = len(meaning_list[0])\n",
+    "    categories = ascii_uppercase[:n_features]\n",
+    "    mrf_string = 'S'+categories\n",
+    "    for i in range(len(categories)):\n",
+    "        category = categories[i]\n",
+    "        category_feature_values = []\n",
+    "        feature_value_segments = []\n",
+    "        for j in range(len(meaning_list)):\n",
+    "            if meaning_list[j][i] not in category_feature_values:\n",
+    "                category_feature_values.append(meaning_list[j][i])\n",
+    "                feature_value_segments.append(lang[j][i])\n",
+    "        for k in range(len(category_feature_values)):\n",
+    "            value = category_feature_values[k]\n",
+    "            segment = feature_value_segments[k]\n",
+    "            mrf_string += \".\"+category+value+segment\n",
+    "    return mrf_string\n",
     "\n",
     "\n",
     "def minimally_redundant_form(lang, forms, meaning_list):\n",
     "    lang_class = classify_language_four_forms(lang, forms, meaning_list) # 0 = degenerate, 1 = holistic, 2 = hybrid, 3 = compositional, 4 = other\n",
     "    if lang_class == 0: # the language is 'degenerate'\n",
-    "        mrf_string = 'S'\n",
-    "        for i in range(len(meaning_list)):\n",
-    "            meaning = meaning_list[i]\n",
-    "            if i != len(meaning_list)-1:\n",
-    "                mrf_string += str(meaning)+','\n",
-    "            else:\n",
-    "                mrf_string += str(meaning)\n",
-    "        mrf_string += lang[0]\n",
+    "        mrf_string = mrf_degenerate(lang, meaning_list)\n",
     "    elif lang_class == 1 or lang_class == 2: # the language is 'holistic' or 'hybrid'\n",
-    "        mrf_string = ''\n",
-    "        for i in range(len(meaning_list)):\n",
-    "            meaning = meaning_list[i]\n",
-    "            form = lang[i]\n",
-    "            if i != len(meaning_list)-1:\n",
-    "                mrf_string += 'S'+meaning+form+'.'\n",
-    "            else:\n",
-    "                mrf_string += 'S'+meaning+form\n",
+    "        mrf_string = mrf_holistic(lang, meaning_list)\n",
     "    elif lang_class == 3: # the language is 'compositional'\n",
-    "        mrf_string = 'SAB'\n",
-    "        for i in range(len(meaning_list)):\n",
-    "            meaning = meaning_list[i]\n",
+    "        mrf_string = mrf_compositional(lang, meaning_list)\n",
     "    return mrf_string\n",
     "\n",
-    "mrf_string_degenerate = minimally_redundant_form(lang_degenerate, forms_without_noisy_variants, meanings)\n",
-    "print(\"mrf_string_degenerate is:\")\n",
-    "print(mrf_string_degenerate)\n",
     "\n",
-    "mrf_string_holistic = minimally_redundant_form(lang_holistic, forms_without_noisy_variants, meanings)\n",
-    "print('')\n",
-    "print(\"mrf_string_holistic is:\")\n",
-    "print(mrf_string_holistic)\n",
     "\n",
     "\n",
     "def character_probs(mrf_string):\n",
@@ -471,33 +509,6 @@
     "        coding_len += log2(char_prob_dict[character])\n",
     "    return -coding_len\n",
     "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-11-14T11:21:49.934010Z",
-     "start_time": "2019-11-14T11:21:49.930722Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from string import ascii_uppercase\n",
-    "\n",
-    "ascii_uppercase"
    ]
   },
   {
@@ -529,19 +540,28 @@
     "# First, let's check whether the functions defined above work correctly\n",
     "# for the example languages given in Kirby et al. (2015):\n",
     "\n",
-    "mrf_string_degenerate = \"S02,03,12,13aa\"\n",
-    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "meanings = ['02', '03', '12', '13']\n",
+    "forms_without_noisy_variants = ['aa', 'ab', 'ba', 'bb']\n",
+    "\n",
+    "lang_degenerate = ['aa', 'aa', 'aa', 'aa']\n",
+    "\n",
+    "lang_holistic = ['aa', 'ab', 'bb', 'ba']\n",
+    "\n",
+    "lang_compositional = ['aa', 'ab', 'ba', 'bb']\n",
+    "\n",
+    "\n",
+    "coding_len_degenerate = coding_length(lang_degenerate)\n",
     "print(\"coding_len_degenerate is:\")\n",
     "print(round(coding_len_degenerate, ndigits=2))\n",
     "\n",
-    "mrf_string_degenerate = \"SAB.A0a.A1b.B2a.B3b\"\n",
-    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "\n",
+    "coding_len_degenerate = coding_length(lang_holistic)\n",
     "print('')\n",
     "print(\"coding_len_degenerate is:\")\n",
     "print(round(coding_len_degenerate, ndigits=2))\n",
     "\n",
-    "mrf_string_degenerate = \"S02aa.S03ab.S12bb.S13ba\"\n",
-    "coding_len_degenerate = coding_length(mrf_string_degenerate)\n",
+    "\n",
+    "coding_len_degenerate = coding_length(lang_compositional)\n",
     "print('')\n",
     "print(\"coding_len_degenerate is:\")\n",
     "print(round(coding_len_degenerate, ndigits=2))"
